Changes to prevent horizontal scrolling on mobile

--- a/src/sass/00-config/__config.sass
+++ b/src/sass/00-config/__config.sass
@@ -9,3 +9,8 @@
 body
   font-family: 'Source Sans Pro'
   font-size: 16px
+  overflow-x: hidden
+
+  .container
+    // Added to prevent horizontal scrolling on mobile
+    overflow-x: hidden
